Fix white Space at top of tab sections

--- a/style.css
+++ b/style.css
@@ -2450,7 +2450,7 @@ zd-autocomplete-title-multibrand {
 
 .tab-content {
   background-color: #ffffff;
-  padding: 50px 40px;
+  padding: 5px 40px 50px 40px;
 }
 
 .tab-content h4 {
